force-app/main/default/objects/Daily_MBS_Round__c/Daily_MBS_Round__c.object-meta.xml
<CustomObject>
    <label>Daily MBS Round</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Daily MBS Round #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily MBS Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>