force-app/main/default/objects/Daily_MBS_Round__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <label>Action Items</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>