force-app/main/default/objects/Daily_MBS_Round__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Daily MBS Rounds</relationshipLabel>
    <relationshipName>Daily_MBS_Rounds</relationshipName>
    <type>Lookup</type>
</CustomField>