force-app/main/default/objects/Daily_MBS_Round__c/fields/Division_s__c.field-meta.xml
<CustomField>
    <fullName>Division_s__c</fullName>
    <label>Division(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Sheltering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>