force-app/main/default/objects/Daily_MBS_Round__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <label>Initials</label>
    <length>25</length>
    <type>Text</type>
</CustomField>