force-app/main/default/objects/Daily_MBS_Round__c/fields/Operational_Topic__c.field-meta.xml
<CustomField>
    <fullName>Operational_Topic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operational Topic</label>
    <type>Checkbox</type>
</CustomField>