force-app/main/default/objects/Daily_MBS_Round__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>Operational_Topic__c</columns>
    <columns>Date__c</columns>
    <columns>Division_s__c</columns>
    <columns>Notes__c</columns>
    <columns>Action_Items__c</columns>
    <columns>Initials__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>